--- a/schedule/01-1.md
+++ b/schedule/01-1.md
@@ -14,7 +14,8 @@
 
 ## Readings
 
-R1 - R5:
+Read these articles ahead of our next class:
+
 1. [Thinking with Components](https://gamedevelopment.tutsplus.com/articles/unity-now-youre-thinking-with-components--gamedev-12492)
 1. [Unity Manual - Intro to Components](https://docs.unity3d.com/Manual/Components.html)
 1. [Unity Manual - Using Components](https://docs.unity3d.com/Manual/UsingComponents.html)
