--- a/schedule/01-1.md
+++ b/schedule/01-1.md
@@ -10,7 +10,7 @@
 
 ## Exercise
 
-[GitHub Hello World](https://classroom.github.com/a/LmPbF81y) - Use the command line (Git Bash) to clone, edit, check local status, stage files, unstage files, commit changes (with vim for commit messages), and push commits.
+[GitHub Hello World](https://classroom.github.com/a/JWoJ_lwz) - Use the command line (Git Bash) to clone, edit, check local status, stage files, unstage files, commit changes (with vim for commit messages), and push commits.
 
 ## Readings
 
