--- a/schedule/01-2.md
+++ b/schedule/01-2.md
@@ -4,14 +4,12 @@
 
 1. [Warm-Up Exercise](https://docs.google.com/document/d/1UKv5EwJhXtgEdQ3ot8TJt8SHJvUZuPQbcGgb-FVpQYg)
 1. [Snowperson Saga - Preview](https://igme-202-17f6.github.io/Syllabus/demo/snowpersons/)
-1. [Unity + GitHub : Saga Setup]() - [Summary](https://docs.google.com/presentation/d/1TrWpMLpC6GBywlRzkLhoJZkUXbTgBtpibI_jS8NhrJw)
-1. [Intro to Unity : Live Demo]() - [Summary]()
-1. []()
-1. []()
+1. [Unity + GitHub : Saga Setup](https://classroom.github.com/a/ixr5E-7J) - [Summary](https://docs.google.com/presentation/d/1TrWpMLpC6GBywlRzkLhoJZkUXbTgBtpibI_jS8NhrJw)
+1. [Intro to Unity : Live Demo](https://classroom.github.com/a/ixr5E-7J) - [Summary](https://docs.google.com/presentation/d/1U9NU5AdIJNKD_-e1pOTJyiBtNBw8_qQE7V0KxIeh3_E)
 
 ## Exercise
 
-[Snowperson Saga]() - Part 1 : Fancify Your Snowperson
+[Snowperson Saga](https://classroom.github.com/a/ixr5E-7J) - Part 1 : Fancify Your Snowperson
 
 ## Readings
 
