--- a/schedule/02-2.md
+++ b/schedule/02-2.md
@@ -3,6 +3,7 @@
 ## Agenda
 
 1. [Warm-Up Exercise](https://docs.google.com/document/d/1qrYgcBYcvyVO60An3-hqC-Algkkbo44ikCe-oY-jjUg)
+1. [Importing Standard Assets](https://docs.google.com/presentation/d/1ucBGrbcTFMofHZxLuTVzuf8e1sZGmnzJ35FwDsT_J4k)
 1. [Scripting : Live Demo](https://classroom.github.com/a/ixr5E-7J) - [Summary](https://docs.google.com/presentation/d/1gAYgx7hWNHtcGIR6eSaAnvVbH3NhHsO6lQf2fm1evxE)
 
 ## Exercise
