--- a/schedule/04-1.md
+++ b/schedule/04-1.md
@@ -13,6 +13,6 @@ None today. Work on your Project!
 
 Watch this video ahead of our next class:
 
-1. [Layer-Based Procedural Generation for Infinite Worlds](https://www.youtube.com/watch?v=GJWuVwZO98s&t=208s)
+1. [Layer-Based Procedural Generation for Infinite Worlds](https://www.youtube.com/watch?v=GJWuVwZO98s)
 
 (While you watch, think about how it might be done, and what could be improved about it.)
