--- a/schedule/05-1.md
+++ b/schedule/05-1.md
@@ -11,4 +11,4 @@ None today. ::gasp::
 
 ## Readings
 
-Nothing to read - but come to class on Thursday having thought about how you might apply vectors to moving a 2D vehicle. Specifically, what vectors would a vehicle need?
+Nothing to read - but come to class on Thursday having thought about how you might apply vectors to moving a 2D vehicle (from a game like, say, Asteroids). Specifically, what vectors would a vehicle need?
