--- a/schedule/10-1.md
+++ b/schedule/10-1.md
@@ -4,7 +4,7 @@
 
 1. [Warm-Up Exercise](https://docs.google.com/document/d/1ICnZ6qWGs8CJ6qc3EbiaXn22FesdQQQ7tEypplcqOF0)
 1. [Refactor + Basic Steering](https://docs.google.com/presentation/d/1Tdh9UZYrFkGV70oIN6CTZHZipClVRF7FlcFsEhmRJvo)
-1. [Project 3 - HvZ](link tk)
+1. [Project 3 - HvZ](https://classroom.github.com/a/Zu-GWa6W)
 
 ## Exercise
 
