--- a/schedule/11-1.md
+++ b/schedule/11-1.md
@@ -13,6 +13,6 @@ None, continue work on your project. (We'll have another milestone check-in as e
 
 Read about wandering, and consider how it compares to our "random walk" from earlier. We'll be talking about Wander next class!
 
-[Nature of Code : 6.5](http://natureofcode.com/book/chapter-6-autonomous-agents/#chapter06_section5)
-[Craig Reynolds](http://www.red3d.com/cwr/steer/Wander.html)
-[Envato/Tuts+](https://gamedevelopment.tutsplus.com/tutorials/understanding-steering-behaviors-wander--gamedev-1624)
+* [Nature of Code : 6.5](http://natureofcode.com/book/chapter-6-autonomous-agents/#chapter06_section5)
+* [Craig Reynolds](http://www.red3d.com/cwr/steer/Wander.html)
+* [Envato/Tuts+](https://gamedevelopment.tutsplus.com/tutorials/understanding-steering-behaviors-wander--gamedev-1624)
