--- a/schedule/11-2.md
+++ b/schedule/11-2.md
@@ -7,7 +7,7 @@
 
 ## Exercise
 
-No exercise. Instead I'll be doing another Project 3 check-in on Tuesday. You should be mostly done with milestone 2 (roughly, you're welcome to pick and choose from the other milestones as you see fit).
+No exercise. Instead I'll be doing another Project 3 check-in that counts as an Exercise grade on Tuesday. You should be mostly done with milestone 2 (roughly, you're welcome to pick and choose from the other milestones as you see fit).
 
 
 ## Readings
