--- a/schedule/14-2.md
+++ b/schedule/14-2.md
@@ -2,8 +2,8 @@
 
 ## Agenda
 
-1. [Warm-Up Exercise](docs.google.com/document/d/17mR9TXIuuBPxvU3iUV6A6sMy72NdVwKdxdQ_cgGG1xs)
-1. [Lecture Code](https://github.com/IGME-202-17F6/lecture-code-flow-fields) - [Summary : Flow Fields, Resistance Fields](docs.google.com/presentation/d/13b5KBuzrk1v_cczlN7_mbyZq5YhVAdsQHNMEMJVg2Pc)
+1. [Warm-Up Exercise](https://docs.google.com/document/d/17mR9TXIuuBPxvU3iUV6A6sMy72NdVwKdxdQ_cgGG1xs)
+1. [Lecture Code](https://github.com/IGME-202-17F6/lecture-code-flow-fields) - [Summary : Flow Fields, Resistance Fields](https://docs.google.com/presentation/d/13b5KBuzrk1v_cczlN7_mbyZq5YhVAdsQHNMEMJVg2Pc)
 
 ## Exercise
 
